--- a/website/css/join.css
+++ b/website/css/join.css
@@ -21,6 +21,7 @@ form p span {
 
 form p input {
     min-width: -webkit-fill-available;
+    min-width: -moz-available;
     line-height: 40px;
 }
 
@@ -34,7 +35,7 @@ form p input {
 .card {
     min-height: 50px;
     padding: 10px 20px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
+    /* box-shadow: 0 1px 4px rgba(0, 0, 0, .04); */
     border: 1px solid rgba(0, 0, 0, .09);
     margin-bottom: 16px;
 }
