--- a/website/css/office.css
+++ b/website/css/office.css
@@ -49,6 +49,7 @@ section {
 
 .branch-status {
     max-width: fit-content;
+    max-width: -moz-available;
     padding: 2px;
     font-size: 13px;
 }
@@ -72,30 +73,40 @@ section {
 
 
 .list-item {
-    border: 1px solid #efefef;
-    padding: 10px 14px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
+    border-bottom: 1px solid #efefef;
+    cursor: pointer;
+    /* padding: 10px 14px; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* border-radius: 4px; */
+    min-height: 140px;
 }
 
 .list-item>* {
-    pointer-events: none;
+    /* pointer-events: none; */
 }
 
-.list-item-name {
-    /* font-size: 1.2em; */
-    margin-bottom: 10px;
-}
+/* .list-item-name { */
+/* font-size: 1.2em; */
+/* margin-bottom: 10px; */
+/* } */
 
-.list-item-address {
-    color: #949494;
-    /* line-height: 18px; */
-}
+/* .list-item-address { */
+/* color: #949494; */
+/* line-height: 18px; */
+/* } */
 
 .maps-container {
     text-align: center;
 }
+
+/* .list-item-link-container { */
+/* line-height: 140px; */
+/* } */
+
+/* .pad-10 { */
+/* padding: 10px; */
+/* } */
 
 form p {
     margin: 25px 0px;
@@ -116,11 +127,13 @@ form p span {
 
 form p input {
     min-width: -webkit-fill-available;
+    min-width: -moz-available;
     min-height: 35px;
 }
 
 form p textarea {
     min-width: -webkit-fill-available;
+    min-width: -moz-available;
     resize: vertical;
 }
 
@@ -144,6 +157,10 @@ form p select {
     overflow-y: scroll;
 }
 
+#load-map-button img {
+    max-width: 100%;
+}
+
 .product-box {
     cursor: pointer;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
@@ -155,7 +172,9 @@ form p select {
     background: #f9f9fa;
 }
 
-
+product-box>* {
+    pointer-events: none;
+}
 
 .product-name-container {
     display: flex;
